# PillPouch

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task-L.md  task-M.md  task-S.md
.github/workflows/: ios-build.yml  server-build.yml
PillPouch/: Item.swift  PillPouchApp.swift
PillPouch.xcodeproj/: project.pbxproj
docs/: README.md  api.md  architecture.md  brief.md  data-model.md  design-system.md  identity.md
docs/adr/: 0001-rust-axum-backend.md  0002-sqlite-litestream.md  0003-fly-io-hosting.md  0004-monorepo.md  0005-no-tca-swiftui-native.md  0006-hyper-waterfall-adaptive.md  0007-server-catalog-as-source-of-truth.md  0008-category-image-hosting.md  0009-tear-gesture-middle-perforation.md  0010-sot-identity-brief-two-layer.md  0011-recommendations-feature.md  0012-railway-hosting.md  0013-railway-volume-backups.md  0014-category-image-hosting-on-railway.md  README.md
docs/conventions/: README.md  ai-collab-meta.md  code-style.md  response-patterns.md
docs/dogfooding/: README.md  log-template.md
docs/feedback/: README.md
docs/orders/: README.md
docs/plan/: README.md  milestones.md
docs/plans/: README.md  task_W1_10_impl.md  task_W1_14_impl.SUPERSEDED.md  task_W1_1_impl.md  task_W1_27_impl.md  task_W1_5_impl.md  task_W1_9_impl.md  task_W2_11_impl.md  task_W2_16_impl.md  task_W2_17_impl.md  task_W2_25.md  task_W2_25_impl.md  task_W3_18.md  task_W3_18_impl.md  task_W3_31.md  task_W3_37.md  task_W3_37_impl.md
docs/report/: README.md  task_W1_10_report.md  task_W1_1_report.md  task_W1_27_report.md  task_W1_5_report.md  task_W1_9_report.md  task_W2_11_pr1_report.md  task_W2_16_report.md  task_W2_17_report.md  task_W2_25_stage1.md  task_W2_25_stage2.md  task_W2_25_stage3.md  task_W2_25_stage4.md  task_W2_25_stage5.md  task_W3_18_report.md  task_W3_18_stage1.md  task_W3_18_stage2.md  task_W3_18_stage3.md  task_W3_31_report.md  task_W3_37_report.md  task_W3_37_stage0.md  task_W3_37_stage1.md  task_W3_37_stage2.md  task_W3_37_stage3.md  task_W3_37_stage4.md
docs/runbooks/: README.md  apns-cert-setup.md  deploy.md  github-repo-setup.md  ios-pts-debug.md  litestream-restore.md
docs/tech/: README.md
docs/troubleshootings/: README.md  ci-ios-simulator-missing.md  ci-rust-clippy-doc-markdown.md  ci-ui-test-runner-launch-hang.md  ios-deployment-target-26-mismatch.md
docs/working/: README.md  category-prompts.md  market-research-summary.md  task-17-review.md  task_W3_31_stage1.md  task_W3_31_stage2.md  task_W3_31_stage3.md  task_W3_31_stage4.md
ios/PillPouch/: ContentView.swift  PillPouchApp.swift
ios/PillPouch.xcodeproj/: project.pbxproj
ios/PillPouch/Assets.xcassets/Categories/calcium.imageset/: Contents.json
ios/PillPouch/Assets.xcassets/Categories/collagen.imageset/: Contents.json
ios/PillPouch/DesignSystem/Tokens/: Color+Tokens.swift  Spacing.swift  Typography.swift
ios/PillPouch/Features/Pouch/: JaggedTearPath.swift  PouchPaperLayer.swift  PouchState.swift  PouchTearLayer.swift  PouchView.swift  SlotStamp.swift
ios/PillPouch/Features/Showcase/: PouchShowcaseView.swift
ios/PillPouch/Models/: CategoryMirror.swift  Enums.swift  IntakeLog.swift  IntakeSchedule.swift  Supplement.swift  UserSettings.swift
ios/PillPouch/Resources/: category-seed.json
ios/PillPouchTests/: PillPhysicsEngineTests.swift  PillPouchTests.swift
ios/PillPouchUITests/: PillPouchUITests.swift  PillPouchUITestsLaunchTests.swift
scripts/: README.md  category-spec.json  imageset-categories.sh  preview-categories.sh
server/: .dockerignore  Cargo.toml  Dockerfile  README.md
server/crates/api/: Cargo.toml
server/crates/api/src/: categories.rs  lib.rs  main.rs  recommendations.rs
server/crates/domain/: Cargo.toml
server/crates/domain/src/: category.rs  lib.rs  recommendation.rs
server/crates/pusher/: Cargo.toml
server/crates/pusher/src/: lib.rs
server/crates/storage/: Cargo.toml
server/crates/storage/src/: categories.rs  lib.rs  recommendations.rs
server/migrations/: 0001_recommendations.sql  0002_category.sql  0003_seed_categories.sql
server/seed/: categories.json  recommendations.json
(+21 files in other folders)
