[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/pusher",
    "crates/domain",
    "crates/storage",
]

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "Proprietary"
repository = "https://github.com/kswift1/PillPouch"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP framework (ADR-0001)
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "set-header"] }
# DB (ADR-0001 sqlx compile-time check, ADR-0002 SQLite + Litestream)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "macros", "migrate"] }
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error
anyhow = "1"
thiserror = "2"
# Logging (ADR-0001)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Datetime (ADR-0001 chrono + chrono-tz)
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
# 한국어 doc 주석에 Axum/SQLite/APNs 등 영문 키워드가 자주 등장.
# 코드 식별자처럼 매번 백틱 감싸는 비용 > 얻는 가치.
# 의식적으로 백틱 쓰는 것은 자유.
doc_markdown = "allow"
